K8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: k8s-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test 
    spec:
      containers:
      - name: test-web
        image: nginx
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: "/var/www/data"
          name: pv
      volumes:
        - name: pv
          persistentVolumeClaim:
            claimName: my-disk

---


apiVersion: v1
kind: Service
metadata:
  name: test
spec:
  selector:
    app: test
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
